--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
